- explicitely set LC_NUMERIC to "C" at startup. R does not work correctly with other settings of LC_NUMERIC
- many new plugins by Stefan Roediger
- clean up R temporary files on shutdown
- when switching between dialog and wizard interfaces, GUI settings are copied
- fix crash with objects with quotes in their names
- add options to show help-search and R help index to Help menu
- complete rework of plugins code
- plugins can embed other plugins
- code display (for plugins) gets updated reliably
- avoid leftover PHP processes if rkward crashes or gets killed
- autodetection of R_HOME and related variables during configure
- fix status bar
- handle non-existing and non-local URLs (links) in help window
- use a shell wrapper around rkward to do some setup just like R. This should fix a number of minor quirks
- Configure: use single configure option for location of R_HOME, and add check for libR.so
- yet more code cleanups
- keep main window caption up to date
- update tab caption for command editor if filename changes (i.e. saved as)
- indicate if a document in a command editor is modified (unsaved)

--- Version 0.3.4 - Nov-08-2005
- assorted bugfixes
- include debian-dir in source distribution
- real time display of command output in the console
- automatically scroll command log to the bottom when new lines are added
- less verbose output in command log (removed "issuing command", etc.)
- use KXMLGUI for placing plugins in the menu (mostly an internal change, but menu placement should remain sane, when active window changes, now)
- help-, output-, and editor-views can be detached to separate windows
- allow to bypass startup dialog
- back/forward navigation in help pages
- can print help pages and output
- better handling of errors while installing packages
- limit number of lines to display in console and command log (user setting)
- remove menu clutter from help window, and output window
- avoid adding incomplete (multi-line) Console commands to the Command Log